kubernetes/apps/network/cert-manager/cert-availability/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app nginx-cloud
  labels:
    # app.kubernetes.io/name: *app
    # app.kubernetes.io/instance: *app
    kubernetes.io/ingress.class: nginx-external
spec:
  ingressClassName: nginx-external
  rules:
    - host: &host nginx.cloud.icylair.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
  tls:
  - hosts:
      - nginx.cloud.icylair.com
    secretName: cloud-icylair-com-prod
  - hosts:
      - nginx.cloud.icylair.com
    secretName: cloud-icylair-com-staging
  - hosts:
      - nginx.cloud.icylair.com
    secretName: local-icylair-com-prod
  - hosts:
      - nginx.cloud.icylair.com
    secretName: local-icylair-com-staging
  - hosts:
      - nginx.cloud.icylair.com
    secretName: icylair-com-prod
  - hosts:
      - nginx.cloud.icylair.com
    secretName: icylair-com-staging
  - hosts:
      - nginx.cloud.icylair.com
    secretName: cloud-icylair-com-prod
  - hosts:
      - nginx.cloud.icylair.com
    secretName: cloud-icylair-com-staging
  - hosts:
      - nginx.cloud.icylair.com
    secretName: local-icylair-com-prod
  - hosts:
      - nginx.cloud.icylair.com
    secretName: local-icylair-com-staging
  - hosts:
      - nginx.cloud.icylair.com
    secretName: icylair-com-prod
  - hosts:
      - nginx.cloud.icylair.com
    secretName: icylair-com-staging
